fix for button shifting in mobile

--- a/client/src/components/LoginBtns/style.css
+++ b/client/src/components/LoginBtns/style.css
@@ -16,11 +16,8 @@ body{
 }
 
 @media only screen and (max-width: 460px) {
-    .loginCard {
-      max-width: 300px
-    }
 
-    .loggedinBtns {
+    #loggedinBtns {
       margin: 0;
     }
     
